# Nefes

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  environment.yml  pyproject.toml
.claude/: settings.json
docs/: README.md  _quarto.yml  atomic-elements.md  best-practices.md  composite-elements.md  conventions.md  custom.scss  documentation-plan.md  index.md  nomenclature.md  references.bib
docs/_scripts/: build_examples.py
docs/design/: _metadata.yml  assembly.md  complex-step.qmd  kernel-architecture.md  parameters.md  philosophy.md  reproducibility.md  smoothness-contract.md  solver.md  ui-io.md
docs/reference/: atomic-elements.md  composite-elements.md  examples.md  modeling-guide.md  parameter-schema.md  parameters.md  ui-case-format.md
docs/theory/: _metadata.yml  analyses.qmd  characteristics.md  choking.qmd  dynamic-sources.qmd  elements.md  equation-structure.md  framework.md  governing-equations.md  identification.md  limitations.md  overview.md  perturbation-network.md  state-and-recovery.qmd  thermochemistry.md  transport.qmd  well-posedness.md
docs/validation/: _metadata.yml  benchmarks.md  validation-map.md  verification.md
examples/: README.md  acoustic_refinement.ipynb  acoustic_terminations.yaml  analytic_continuation.ipynb  burnt_marker.ipynb  composite_elements.ipynb  compositional_noise.ipynb  converging_nozzle.ipynb  converging_nozzle.yaml  dokumaci_expansion_chamber.ipynb  duct_stability.py  eigenmode_analysis.ipynb  entropy_generator.ipynb  entropy_noise.ipynb  equivalence_ratio_instability.ipynb  flame_identification.ipynb  frequency_dependent_reflection.ipynb  gas_turbine_combustor.ipynb  gas_turbine_large.ipynb  gas_turbine_large.yaml  greyvenstein_laurie_network.ipynb  helmholtz_resonator.ipynb  huge_network_stress.ipynb  indirect_noise_instability.ipynb  inertance_storage.ipynb  mode_shape_animation.ipynb  multiple_fuel_manifold.ipynb  multiple_fuels.ipynb  outlet_boundaries.ipynb  perturbation_boundary_conditions.ipynb  reacting_flame.ipynb  rijke_tube.ipynb  save_load_demo.ipynb
examples/acoustics/: acoustic_refinement.ipynb  analytic_continuation.ipynb  compositional_noise.ipynb  eigenmode_analysis.ipynb  frequency_dependent_reflection.ipynb  helmholtz_resonator.ipynb  inertance_storage.ipynb  mode_shape_animation.ipynb  outlet_boundaries.ipynb  perturbation_boundary_conditions.ipynb
examples/combustion/: burnt_marker.ipynb  gas_turbine_combustor.ipynb  multiple_fuel_manifold.ipynb  multiple_fuels.ipynb  reacting_flame.ipynb  rql_combustor.ipynb  rql_combustor.yaml
examples/flow/: can_annular_combustor.ipynb  can_annular_combustor.yaml  composite_elements.ipynb  gas_turbine_large.ipynb  gas_turbine_large.yaml  huge_network_stress.ipynb  parameter_studies.ipynb
examples/getting-started/: converging_nozzle.ipynb  converging_nozzle.yaml  save_load_demo.ipynb
examples/thermoacoustics/: brs_combustor.ipynb  em2c_combustor.ipynb  entropy_noise.ipynb  equivalence_ratio_instability.ipynb  flame_identification.ipynb  indirect_noise_instability.ipynb  ita_and_cavity_modes.ipynb  rijke_tube.ipynb
examples/validation/: dokumaci_expansion_chamber.ipynb  entropy_generator.ipynb  greyvenstein_laurie_network.ipynb  tfaws07_gfssp_compressible.ipynb
fns/: __init__.py  acoustics.py  assemble.py  chemistry.py  closure.py  composition.py  connectivity.py  derive.py  problem.py  scaling.py  smooth.py
fns/assembly/: __init__.py  scaling.py
fns/chem/: __init__.py  chemistry.py
fns/elements/: __init__.py  catalog.py  composite.py  continuation.py  dynamic_source.py  ids.py  kernels.py
fns/graph/: __init__.py  problem.py
fns/io/: provenance.py  yaml_in.py  yaml_out.py
fns/perturbation/: __init__.py  boundary_bc.py  characteristics.py  contour.py  cuton.py  drivers.py  duct.py  eigenmodes.py  forced.py  matrices.py  modeshape.py  nyquist.py  operator.py  power.py  response.py  stamps.py  terminals.py  trajectory.py  verify.py
fns/plotting/: __init__.py  complex_matrix.py  continuation.py  labels.py  modeshape.py  spectrum.py  theme.py  topology.py  transfer_function.py
fns/shell/: network.py
fns/solver/: __init__.py  control.py
fns/thermo/: _chem.py  api.py  configure.py  equilibrium.py
nefes/: __init__.py  config.py
nefes/assembly/: __init__.py  assemble.py  closure.py  derive.py  recover.py  scaling.py  smooth.py
nefes/chem/: __init__.py  chemistry.py  composition.py
nefes/elements/: __init__.py  catalog.py  composite.py  continuation.py  dynamic_source.py  ids.py  kernels.py  parameters.py
nefes/graph/: __init__.py  connectivity.py  problem.py
nefes/io/: __init__.py  provenance.py  yaml_in.py  yaml_out.py
nefes/perturbation/: __init__.py  continuation.py  matrix.py
nefes/plotting/: __init__.py  _deps.py  complex_matrix.py  continuation.py  labels.py  modeshape.py  sensitivity.py  spectrum.py  theme.py  topology.py  (+1 more)
paper/: paper.md
tests/: conftest.py  test_acoustic_power.py  test_adaptive_scaling.py  test_assemble.py  test_auto_species_set.py  test_brs_ita.py  test_burnt_marker.py  test_cantera_validation.py  test_cea.py  test_checks.py  test_chem_kernel.py  test_closure.py  test_complex_step_safety.py  test_composite_elements.py  test_composite_ui_io.py  test_composition_mixture.py  test_connectivity.py  test_continuation.py  test_continuation_dp_scaling.py  test_continuation_stress.py  test_cuton.py  test_dynamic_source.py  test_element_naming.py  test_entropy_noise.py  test_equilibrium.py  test_fanno.py  test_flame.py  test_flame_orientation_guard.py  test_forced_splitter.py  test_fuel_modulation.py  test_greyvenstein_laurie.py  test_homotopy_dp_scaling.py  test_homotopy_stress.py  test_identify.py  test_inflow_marker.py  test_intensity_field.py  test_junction.py  test_junction_loss.py  test_junction_stress.py  test_linear_resistance.py  (+54 more)
thermolib/: README.md  REQUIREMENTS.md  TODO.md  __init__.py  backends.py  cea.py  constants.py  elements.py  equilibrium.py  mechanism.py  properties.py  reduction.py  smooth.py  species.py  thermo.py
(+88 files in other folders)
