[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nefes"
authors = [
    { name = "Cetin Alanyalioglu" },
]
version = "0.1.0"
description = "Network solver for reacting compressible flows and thermoacoustics"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pyyaml",
]

[project.optional-dependencies]
# Visualization: the nefes.plotting subpackage and the perturbation viewers render figures with
# Plotly. The core solver does not, so Plotly is kept out of the base dependencies.
viz = ["plotly>=5.0"]
# Notebook stack: run and render the example gallery (pulls in Plotly through the viz extra).
jupyter = ["nefes[viz]", "jupyterlab", "notebook", "ipykernel", "nbformat>=4.2.0", "nbclient"]
# Test suite: pytest plus everything the plotting and notebook-execution tests import.
test = ["nefes[jupyter]", "pytest"]
# Developer tooling: the full test suite plus the formatter and linter.
dev = ["nefes[test]", "flake8", "black"]
# Documentation site: quartodoc renders the API pages from docstrings and the example gallery
# executes notebooks, so it pulls the notebook stack too. The Quarto CLI itself is external and
# installed separately (https://quarto.org).
docs = ["nefes[jupyter]", "quartodoc>=0.11", "griffe>=1.5,<2"]

[tool.setuptools.packages.find]
include = ["nefes*"]

[tool.setuptools.package-data]
# ship the vendored NASA Glenn / CEA thermo database and the native species YAMLs
"nefes.thermo" = ["data/*.inp", "data/*.yaml"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::numba.core.errors.NumbaPerformanceWarning"]
