[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nefes"
authors = [
    { name = "Cetin Alanyalioglu" },
]
version = "0.1.0"
description = "Network solver for reacting compressible flows and thermoacoustics"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.15",
    "numba>=0.60",
    "pyyaml>=6",
]

[project.optional-dependencies]
viz = ["plotly>=5.0"]
jupyter = ["nefes[viz]", "jupyterlab>=4.0", "notebook>=7.0", "ipykernel>=6.0", "nbformat>=5.1", "nbclient>=0.6"]
test = ["nefes[jupyter]", "pytest>=7.0", "pytest-cov>=5.0", "pytest-timeout>=2.0"]
dev = ["nefes[test]", "flake8>=6.0", "black[jupyter]>=24.0", "isort>=5.13", "pre-commit>=3.5"]
# The Quarto CLI itself is external and installed separately (https://quarto.org).
docs = ["nefes[jupyter]", "quartodoc>=0.11", "griffe>=1.5,<2"]

[tool.setuptools.packages.find]
include = ["nefes*"]

[tool.setuptools.package-data]
"nefes.thermo" = ["data/*.inp", "data/*.yaml"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
skip = ["scratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::numba.core.errors.NumbaPerformanceWarning"]

[tool.coverage.run]
source = ["nefes"]

[tool.coverage.report]
show_missing = true
# The @njit kernels compile to machine code, so coverage.py cannot trace their bodies. Tracing
# them by running with JIT off is not an option: the complex-step method then loses the imaginary
# perturbation in real-typed temporaries, so the suite does not pass. The kernels are covered
# instead by the complex-step-safety contract in tests/test_complex_step_safety.py, a stronger
# guarantee than line coverage. Excluding the decorated bodies keeps the reported figure a measure
# of the Python layer, where line coverage is meaningful, and still counts non-kernel code in the
# same modules.
exclude_also = ['^\s*@njit']
